<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Atalho para Notas -->
    <shortcut
        android:shortcutId="notas"
        android:enabled="true"
        android:icon="@drawable/shortcut_notas"
        android:shortcutShortLabel="@string/shortcut_notas_short"
        android:shortcutLongLabel="@string/shortcut_notas_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.marinov.openfei"
            android:targetClass="com.marinov.openfei.MainActivity">
            <extra android:name="destination" android:value="notas" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Atalho para Horários de Aula -->
    <shortcut
        android:shortcutId="horarios"
        android:enabled="true"
        android:icon="@drawable/shortcut_aulas"
        android:shortcutShortLabel="@string/shortcut_horarios_short"
        android:shortcutLongLabel="@string/shortcut_horarios_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.marinov.openfei"
            android:targetClass="com.marinov.openfei.MainActivity">
            <extra android:name="destination" android:value="horarios" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Atalho para Calendário de Provas -->
    <shortcut
        android:shortcutId="provas"
        android:enabled="true"
        android:icon="@drawable/shortcut_calendario"
        android:shortcutShortLabel="@string/shortcut_provas_short"
        android:shortcutLongLabel="@string/shortcut_provas_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.marinov.openfei"
            android:targetClass="com.marinov.openfei.MainActivity">
            <extra android:name="destination" android:value="provas" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>